Fixed recentering adjusting the player's orientation. Cell changes should now retain the proper orientation. Added support for seated play.

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1023,6 +1023,8 @@ left hand hud position = wrist
 # As the general quality of OpenXR DirectX runtimes is better than OpenGL runtimes, i default this to true.
 Prefer DirectX swapchains = true
 
+seated play = false
+
 [VR Debug]
 # If true, OpenMW-VR will enable gamma postprocessing
 gamma postprocessing = true
