--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1068,6 +1068,10 @@ left hand hud position = wrist
 # As the general quality of OpenXR DirectX runtimes is better than OpenGL runtimes, i default this to true.
 Prefer DirectX swapchains = true
 
+# If true, OpenMW-VR will use sRGB textures in its swapchains if available. Needed for some headsets that don't play nice without sRGB.
+Prefer sRGB swapchains = false
+
+# If true, OpenMW-VR will enable seated play.
 seated play = false
 
 [VR Debug]
