Default disable composition layer depth until i either figure out what i'm doing wrong, or steamvr fixes whatever they're doing wrong.

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1090,6 +1090,11 @@ continue on errors = true
 # If true, enable openxr debug functionality via the XR_EXT_debug_utils extension
 enable XR_EXT_debug_utils = false
 
+# If true, enable composition layer depth functionality via the XR_KHR_composition_layer_depth extension
+# This defaults to false because either my implementation is borked or some runtimes' are.
+# It'll stay in settings jail until i figure it out.
+enable XR_KHR_composition_layer_depth = false
+
 # Enable/disable openxr debug message levels
 XR_EXT_debug_utils message level verbose = false
 XR_EXT_debug_utils message level info = true
