--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,26 +76,27 @@ Debian_GCC_tests:
     CCACHE_SIZE: 1G
     BUILD_TESTS_ONLY: 1
 
-Debian_GCC_Static_Deps:
-  extends: Debian_GCC
-  cache:
-    key: Debian_GCC_Static_Deps
-    paths:
-    - apt-cache/
-    - ccache/
-    - build/extern/fetched/
-  before_script:
-    - CI/install_debian_deps.sh gcc openmw-deps openmw-deps-static
-  variables:
-    CI_OPENMW_USE_STATIC_DEPS: 1
+# This just times out.
+#Debian_GCC_Static_Deps:
+#  extends: Debian_GCC
+#  cache:
+#    key: Debian_GCC_Static_Deps
+#    paths:
+#    - apt-cache/
+#    - ccache/
+#    - build/extern/fetched/
+#  before_script:
+#    - CI/install_debian_deps.sh gcc openmw-deps openmw-deps-static
+#  variables:
+#    CI_OPENMW_USE_STATIC_DEPS: 1
 
-Debian_GCC_Static_Deps_tests:
-  extends: Debian_GCC_Static_Deps
-  cache:
-    key: Debian_GCC_Static_Deps_tests
-  variables:
-    CCACHE_SIZE: 1G
-    BUILD_TESTS_ONLY: 1
+#Debian_GCC_Static_Deps_tests:
+#  extends: Debian_GCC_Static_Deps
+#  cache:
+#    key: Debian_GCC_Static_Deps_tests
+#  variables:
+#    CCACHE_SIZE: 1G
+#    BUILD_TESTS_ONLY: 1
 
 Debian_Clang:
   extends: .Debian
