Refactoring: Separated extension management code into a new extensions class.

--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -208,6 +208,7 @@ if(BUILD_OPENMW_VR)
         action
         actionset
         debug
+        extensions
         input
         instance
         platform
