correct link order

--- a/apps/openmw/CMakeLists.txt
+++ b/apps/openmw/CMakeLists.txt
@@ -279,7 +279,8 @@ if(BUILD_OPENMW_VR)
     elseif(UNIX)
         target_compile_options(openmw_vr PUBLIC -DUSE_OPENXR -DXR_USE_GRAPHICS_API_OPENGL -DXR_USE_PLATFORM_XLIB)
         find_package(X11 REQUIRED)
-        target_link_libraries(openmw_vr ${X11_LIBRARIES})
+        set(OPENMW_LINK_TARGETS ${OPENMW_LINK_TARGETS}
+            ${X11_LIBRARIES})
     endif()
     target_link_libraries(openmw_vr ${OPENMW_LINK_TARGETS})
     if(APPLE)
