--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -343,8 +343,8 @@ if(BUILD_OPENMW_VR)
 
     # Preprocessor variables used to control code paths to vr code
     if (WIN32)
-        target_compile_options(components PUBLIC -DUSE_OPENXR -DXR_USE_GRAPHICS_API_OPENGL -DXR_USE_GRAPHICS_API_D3D11 -DXR_USE_PLATFORM_WIN32)
+        target_compile_options(components PUBLIC -DXR_USE_GRAPHICS_API_OPENGL -DXR_USE_GRAPHICS_API_D3D11 -DXR_USE_PLATFORM_WIN32)
     elseif(UNIX)
-        target_compile_options(components PUBLIC -DUSE_OPENXR -DXR_USE_GRAPHICS_API_OPENGL -DXR_USE_PLATFORM_XLIB)
+        target_compile_options(components PUBLIC -DXR_USE_GRAPHICS_API_OPENGL -DXR_USE_PLATFORM_XLIB)
     endif()
 endif()
