Force reverse z to off until i implement compatibility with the post processor.

--- a/files/settings-overrides-vr.cfg
+++ b/files/settings-overrides-vr.cfg
@@ -10,6 +10,9 @@ preview if stand still = false
 # Enables head bobbing in first person mode
 head bobbing = false
 
+# Disable reverse Z for now as it breaks with stereo.
+reverse z = true
+
 [GUI]
 # Scales GUI window and widget size. (<1.0 is smaller, >1.0 is larger).
 scaling factor = 1.0  
