correct struct/class forward declarations. move openxr fetchcontent calls to after openscenegraph.

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -188,3 +188,23 @@ if(NOT OPENMW_USE_SYSTEM_RECASTNAVIGATION)
     )
     FetchContent_MakeAvailableExcludeFromAll(recastnavigation)
 endif()
+
+# Note: This must be placed after OpenSceneGraph to avoid a target name collision on "uninstall", 
+# as OSG does not check that this target doesn't already exist.
+if(BUILD_OPENMW_VR)
+    ########### Import the OpenXR SDK
+    # The openxr-sdk doesn't check the version of system jsoncpp so force it to build its bundled version to avoid errors.
+    set(BUILD_WITH_SYSTEM_JSONCPP off) 
+    include(FetchContent)
+    FetchContent_Declare( 
+        OpenXR 
+        GIT_REPOSITORY https://github.com/KhronosGroup/OpenXR-SDK.git
+        GIT_TAG release-1.0.19
+    )
+    FetchContent_MakeAvailable(OpenXR)
+    
+    if (CMAKE_CXX_COMPILER_ID STREQUAL GNU OR CMAKE_CXX_COMPILER_ID STREQUAL Clang)
+        # Triggered by jsoncpp on some platforms
+        target_compile_options(openxr_loader PRIVATE -Wno-everything)
+    endif()
+endif()
