Disable reverse z again

--- a/files/settings-overrides-vr.cfg
+++ b/files/settings-overrides-vr.cfg
@@ -11,7 +11,7 @@ preview if stand still = false
 head bobbing = false
 
 # Disable reverse Z for now as it breaks with stereo.
-reverse z = true
+reverse z = false
 
 [GUI]
 # Scales GUI window and widget size. (<1.0 is smaller, >1.0 is larger).
