--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -440,38 +440,39 @@ Windows_MSBuild_Tests_RelWithDebInfo:
     # Gitlab can't successfully execute following binaries due to unknown reason
     # executables: "openmw_test_suite.exe,openmw_detournavigator_navmeshtilescache_benchmark.exe"
 
-Debian_AndroidNDK_arm64-v8a:
-  tags:
-    - linux
-  image: debian:bullseye
-  variables:
-    CCACHE_SIZE: 3G
-  cache:
-    key: Debian_AndroidNDK_arm64-v8a.v3
-    paths:
-      - apt-cache/
-      - ccache/
-      - build/extern/fetched/
-  before_script:
-    - export APT_CACHE_DIR=`pwd`/apt-cache && mkdir -pv $APT_CACHE_DIR
-    - echo "deb http://deb.debian.org/debian unstable main contrib" > /etc/apt/sources.list
-    - echo "google-android-ndk-installer google-android-installers/mirror select https://dl.google.com" | debconf-set-selections
-    - apt-get update -yq
-    - apt-get -q -o dir::cache::archives="$APT_CACHE_DIR" install -y cmake ccache curl unzip git build-essential google-android-ndk-installer
-  stage: build
-  script:
-    - export CCACHE_BASEDIR="`pwd`"
-    - export CCACHE_DIR="`pwd`/ccache" && mkdir -pv "$CCACHE_DIR"
-    - ccache -z -M "${CCACHE_SIZE}"
-    - CI/before_install.android.sh
-    - CI/before_script.android.sh
-    - cd build
-    - cmake --build . -- -j $(nproc)
-    - cmake --install .
-    - ccache -s
-  artifacts:
-    paths:
-      - build/install/
-  # When CCache doesn't exist (e.g. first build on a fork), build takes more than 1h, which is the default for forks.
-  timeout: 1h30m
+# Disable android build until someone is willing to fix it
+#Debian_AndroidNDK_arm64-v8a:
+#  tags:
+#    - linux
+#  image: debian:bullseye
+#  variables:
+#    CCACHE_SIZE: 3G
+#  cache:
+#    key: Debian_AndroidNDK_arm64-v8a.v3
+#    paths:
+#      - apt-cache/
+#      - ccache/
+#      - build/extern/fetched/
+#  before_script:
+#    - export APT_CACHE_DIR=`pwd`/apt-cache && mkdir -pv $APT_CACHE_DIR
+#    - echo "deb http://deb.debian.org/debian unstable main contrib" > /etc/apt/sources.list
+#    - echo "google-android-ndk-installer google-android-installers/mirror select https://dl.google.com" | debconf-set-selections
+#    - apt-get update -yq
+#    - apt-get -q -o dir::cache::archives="$APT_CACHE_DIR" install -y cmake ccache curl unzip git build-essential google-android-ndk-installer
+#  stage: build
+#  script:
+#    - export CCACHE_BASEDIR="`pwd`"
+#    - export CCACHE_DIR="`pwd`/ccache" && mkdir -pv "$CCACHE_DIR"
+#    - ccache -z -M "${CCACHE_SIZE}"
+#    - CI/before_install.android.sh
+#    - CI/before_script.android.sh
+#    - cd build
+#    - cmake --build . -- -j $(nproc)
+#    - cmake --install .
+#    - ccache -s
+#  artifacts:
+#    paths:
+#      - build/install/
+#  # When CCache doesn't exist (e.g. first build on a fork), build takes more than 1h, which is the default for forks.
+#  timeout: 1h30m
 
