--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1168,6 +1168,12 @@ Prefer sRGB swapchains = false
 # If true, OpenMW-VR will enable seated play.
 seated play = false
 
+# If true, OpenMW-VR will enable smooth turning. Default false for comfort.
+smooth turning = false
+
+# Defines the angle of each snap when using snap turn
+snap angle = 15.0
+
 [VR Debug]
 # If true, OpenMW-VR will enable gamma postprocessing
 gamma postprocessing = true
