--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -199,7 +199,7 @@ macOS10.15_Xcode11:
     CCACHE_SIZE: 3G
 
 variables: &engine-targets
-  targets: "openmw-vr,openmw-launcher,openmw-wizard"
+  targets: "openmw_vr,openmw-launcher,openmw-wizard"
   package: "Engine"
 
 variables: &cs-targets
