Smooth turn rate setting

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1174,6 +1174,9 @@ smooth turning = false
 # Defines the angle of each snap when using snap turn
 snap angle = 15.0
 
+# Defines the turn speed of smooth turning in complete turns per second at max turn speed.
+smooth turn rate = 0.66
+
 [VR Debug]
 # If true, OpenMW-VR will enable gamma postprocessing
 gamma postprocessing = true
