Update settings override

--- a/files/settings-overrides-vr.cfg
+++ b/files/settings-overrides-vr.cfg
@@ -4,58 +4,47 @@
 # Ignoring this and removing/editing lines in this file will either have no effect or break your game.
 
 [Camera]
-# Automatically enable preview mode when player doesn't move.
+# N/A
 preview if stand still = false
-
-# Enables head bobbing in first person mode
+# N/A
 head bobbing = false
 
 # Disable reverse Z for now as it breaks with stereo.
 reverse z = false
 
 [GUI]
-# Scales GUI window and widget size. (<1.0 is smaller, >1.0 is larger).
+# Tooltip delay is reset every time the cursor budgets.
+# A human cannot hold a pointer that stable, so tooltip must be instant
+tooltip delay = 0
+
+# These do not play well with VR
 scaling factor = 1.0  
-
-# Stretch menus, load screens, etc. to the window aspect ratio.
 stretch menu background = false
-
-# Red flash visually showing player damage.
 hit fader = false
-
-# Werewolf overlay border around screen or window.
 werewolf overlay = false
-
-# Controls whether Arrow keys, Movement keys, Tab/Shift-Tab and Spacebar/Enter/Activate may be used to navigate GUI buttons.
 keyboard navigation = true
 
 [HUD]
-
-# Displays the crosshair or reticle when not in GUI mode.
+# N/A
 crosshair = false
 
 [Game]
-# Always use the best mode of attack: e.g. chop, slash or thrust.
+# N/A
 best attack = false
 
 [Video]
-# OpenMW takes complete control of the screen.
+# No point making the mirror texture full screen
 fullscreen = false
-
-# Enable vertical syncing to reduce tearing defects.
+# OpenXR must be in control of frames
 vsync = false
-
-# Maximum frames per second. 0.0 is unlimited, or >0.0 to limit.
 framerate limit = 0
-
-# Type of screenshot to take (regular, cylindrical, spherical or planet), optionally followed by
-# screenshot width, height and cubemap resolution in pixels. (e.g. spherical 1600 1000 1200)
+# Other modes not compatible
 screenshot type = regular
 
 [Stereo]
-
-# Enable/disable stereo view.
+# VR must have stereo enabled
 stereo enabled = true
 
 [Shaders]
+# VR must have shaders enabled
 force shaders = true
