--- a/files/settings-overrides-vr.cfg
+++ b/files/settings-overrides-vr.cfg
@@ -13,7 +13,7 @@ head bobbing = false
 reverse z = false
 
 [GUI]
-# Tooltip delay is reset every time the cursor budgets.
+# Tooltip delay is reset every time the cursor budges.
 # A human cannot hold a pointer that stable, so tooltip must be instant
 tooltip delay = 0
 
