Fix crash on exit

--- a/apps/openmw/CMakeLists.txt
+++ b/apps/openmw/CMakeLists.txt
@@ -241,7 +241,7 @@ if(BUILD_OPENMW_VR)
     add_openmw_dir (mwvr
          openxrinput
          realisticcombat 
-         vranimation vrcamera vrenvironment vrgui vrinputmanager vrinput vrlistbox vrmetamenu vrpointer vrtracking vrtypes vrutil vrvirtualkeyboard
+         vranimation vrcamera vrgui vrinputmanager vrinput vrlistbox vrmetamenu vrpointer vrtracking vrtypes vrutil vrvirtualkeyboard
         )
 
     openmw_add_executable(openmw_vr
