Refactor extensions code

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1185,13 +1185,14 @@ log all openxr calls = false
 # If false, openmw will quit with an exception if an openxr call fails for any reason
 continue on errors = true
 
-# If true, enable openxr debug functionality via the XR_EXT_debug_utils extension
-enable XR_EXT_debug_utils = false
-
-# If true, enable composition layer depth functionality via the XR_KHR_composition_layer_depth extension
-# This defaults to false because either my implementation is borked or some runtimes' are.
-# It'll stay in settings jail until i figure it out.
-enable XR_KHR_composition_layer_depth = false
+# If true, do not use the OpenXR extension
+disable XR_KHR_opengl_enable = false
+disable XR_KHR_D3D11_enable = false
+disable XR_KHR_composition_layer_depth = false
+disable XR_EXT_debug_utils = true
+disable XR_EXT_hp_mixed_reality_controller = false
+disable XR_HTC_vive_cosmos_controller_interaction = false
+disable XR_HUAWEI_controller_interaction = false
 
 # Enable/disable openxr debug message levels
 XR_EXT_debug_utils message level verbose = false
