Basic implementation of MSFT_composition_layer_reprojection

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1193,6 +1193,8 @@ disable XR_EXT_debug_utils = true
 disable XR_EXT_hp_mixed_reality_controller = false
 disable XR_HTC_vive_cosmos_controller_interaction = false
 disable XR_HUAWEI_controller_interaction = false
+disable XR_MSFT_composition_layer_reprojection = false
+disable XR_FB_space_warp = false
 
 # Enable/disable openxr debug message levels
 XR_EXT_debug_utils message level verbose = false
