Refactored stereo/multiview setup

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1109,11 +1109,8 @@ lua num threads = 1
 # Enable/disable stereo view. This setting is ignored in VR.
 stereo enabled = false
 
-# Method used to render stereo if enabled
-# Must be one of the following: BruteForce, OVR_MultiView2
-# BruteForce: Generates stereo using two cameras and two cull/render passes. If your game is GPU-bound, you may see some marginal benefits from this approach.
-# OVR_MultiView2: Generates stereo in a single pass using the GL_OVR_multiview extension. Most users will benefit from this method.
-stereo method = OVR_MultiView2
+# If enabled, OpenMW will use the GL_OVR_MultiView and GL_OVR_MultiView2 extensions where possible.
+multiview = true
 
 # May accelerate the BruteForce method when shadows are enabled
 shared shadow maps = true
