char height back to 1.8288

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1203,3 +1203,7 @@ XR_EXT_debug_utils message type general = true
 XR_EXT_debug_utils message type validation = true
 XR_EXT_debug_utils message type performance = true
 XR_EXT_debug_utils message type conformance = true
+
+# this is the height, in meters, of a character of height 1.0.
+# this is put in config to make it easier to experiment with, it should not stay configurable.
+character base height = 1.8288
