Configurable display list. Doc update to reflect.

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1105,7 +1105,6 @@ lua num threads = 1
 
 
 [Stereo]
-
 # Enable/disable stereo view. This setting is ignored in VR.
 stereo enabled = false
 
@@ -1114,6 +1113,9 @@ multiview = true
 
 # May accelerate the BruteForce method when shadows are enabled
 shared shadow maps = true
+
+# If true, OpenMW-VR will disable display lists when using multiview. Necessary on some buggy drivers, but comes at a slight performance cost.
+disable display lists for multiview = false
 
 [VR]
 # Should match your real height in the format meters.centimeters. This is used to scale your position within the vr stage to better match your character.
