--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1171,8 +1171,8 @@ snap angle = 15.0
 # Defines the turn speed of smooth turning in complete turns per second at max turn speed.
 smooth turn rate = 0.66
 
-# If enabled, the VR pointer will use the left hand instead
-left hand pointer = false
+# If enabled, the VR pointer will use any left handed modes available
+left handed mode = false
 
 [VR Debug]
 # If true, OpenMW-VR will enable gamma postprocessing
