Explicitly manage frustum to achieve correct shadow/light culling.

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1174,7 +1174,7 @@ left hand hud position = wrist
 
 # If true, OpenMW-VR will try to use DirectX swapchains instead of OpenGL swapchains. They are HW bridged to OpenGL using the WGL_NV_DX_interop2 extension.
 # As the general quality of OpenXR DirectX runtimes is better than OpenGL runtimes, i default this to true.
-Prefer DirectX swapchains = true
+Prefer DirectX swapchains = false
 
 # If true, OpenMW-VR will use sRGB textures in its swapchains if available. Needed for some headsets that don't play nice without sRGB.
 Prefer sRGB swapchains = false
