--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1181,7 +1181,7 @@ left hand hud position = wrist
 Prefer DirectX swapchains = false
 
 # If true, OpenMW-VR will use sRGB textures in its swapchains if available. Needed for some headsets that don't play nice without sRGB.
-Prefer sRGB swapchains = false
+Prefer sRGB swapchains = true
 
 # If true, OpenMW-VR will enable seated play.
 seated play = false
