Default multiview to false until an automated fix has been implemented.

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1133,7 +1133,7 @@ i18n preferred languages = en
 stereo enabled = false
 
 # If enabled, OpenMW will use the GL_OVR_MultiView and GL_OVR_MultiView2 extensions where possible.
-multiview = true
+multiview = false
 
 # May accelerate the BruteForce method when shadows are enabled
 shared shadow maps = true
