solving merge issues

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1195,9 +1195,6 @@ left handed mode = false
 # If true, OpenMW-VR will enable gamma postprocessing
 gamma postprocessing = true
 
-# Openmw will sync with openxr at the beginning of this phase in the rendering pipeline. From early to late in the pipeline the options are update, cull, draw, and swap in that order. If you experience visual glitches such as frames jittering across your vision, try changing this to an earlier phase. 
-openxr sync phase = draw
-
 # Log all calls to openxr, not just ones that fail. Useful for debugging.
 log all openxr calls = false
 
@@ -1229,3 +1226,8 @@ XR_EXT_debug_utils message type conformance = true
 # this is the height, in meters, of a character of height 1.0.
 # this is put in config to make it easier to experiment with, it should not stay configurable.
 character base height = 1.8288
+
+# If this option is enabled, openmw-vr will create swapchains with stencil info and submit these.
+# The default is to strip stencil while blitting to openxr swapchains as the stencil info is useless at this point in rendering.
+# This is also motivated by the fact that some runtimes will crash if you submit the depth32f stencil8 format.
+submit stencil formats = false
