--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1141,6 +1141,50 @@ shared shadow maps = true
 # If true, OpenMW-VR will disable display lists when using multiview. Necessary on some buggy drivers, but comes at a slight performance cost.
 disable display lists for multiview = false
 
+# If false, the default OSG horizontal split will be used for stereo
+# If true, the config defined in the [Stereo View] settings category will be used
+# Note: This option is ignored in VR, and exists primarily for debugging purposes
+use custom view = false
+
+# If true, overrides rendering resolution for each eye.
+# Note: This option is ignored in VR, and exists primarily for debugging purposes
+use custom eye resolution = false
+
+[Stereo View]
+# The default values are based on an HP Reverb G2 HMD
+eye resolution x = 3128
+eye resolution y = 3060
+
+# Left eye offset from center, expressed in MW units (1 meter = ~70)
+left eye offset x = -2.35
+left eye offset y = 0.0
+left eye offset z = 0.0
+# Left eye orientation, expressed as a quaternion
+left eye orientation x = 0.0
+left eye orientation y = 0.0
+left eye orientation z = 0.0
+left eye orientation w = 1.0
+# Left eye field of view, expressed in radians
+left eye fov left = -0.86
+left eye fov right = 0.78
+left eye fov up = 0.8
+left eye fov down = -0.8
+
+# Left eye offset from center, expressed in MW units (1 meter = ~70)
+right eye offset x = 2.35
+right eye offset y = 0.0
+right eye offset z = 0.0
+# Left eye orientation, expressed as a quaternion
+right eye orientation x = 0.0
+right eye orientation y = 0.0
+right eye orientation z = 0.0
+right eye orientation w = 1.0
+# Left eye field of view
+right eye fov left = -0.78
+right eye fov right = 0.86
+right eye fov up = 0.8
+right eye fov down = -0.8
+
 [VR]
 # Should match your real height in the format meters.centimeters. This is used to scale your position within the vr stage to better match your character.
 real height = 1.85
