blacklisting texture formats

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1275,3 +1275,7 @@ character base height = 1.8288
 # The default is to strip stencil while blitting to openxr swapchains as the stencil info is useless at this point in rendering.
 # This is also motivated by the fact that some runtimes will crash if you submit the depth32f stencil8 format.
 submit stencil formats = false
+
+# SteamVR has a bug where the unsupported R10G10B10 texture formats are reported as being supported.
+# Ref: https://steamcommunity.com/app/250820/discussions/8/3102390454960504573/
+disable texture format = steamvr:0x8059 steamvr:0x906F steamvr:0x8052
